name:                cabal-install-bins
version:             0.1.0.0
synopsis:            Install executables built by cabal new-build
description:         A workaround for the lack of `cabal new-install`. cabal-install-bins reads
                     the plan.json file produced by cabal new-build, locates the built executable
                     files, and copies them to the install directory.
homepage:            https://github.com/zarvunk/cabal-install-bins
license:             MIT
license-file:        LICENSE
author:              Alan Rempel
maintainer:          alan.rempel@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable cabal-install-bins
  main-is:             Main.hs
  other-extensions:    RecordWildCards
                     , NamedFieldPuns
                     , ViewPatterns
                     , OverloadedStrings
  build-depends:       base >=4.8 && <5
                     , containers >=0.5
                     , cabal-plan
                     , directory
                     , filepath
                     , optparse-applicative
                     , text
  default-language:    Haskell2010
